[package]
name = "clia-ntex-cors-mod"
version = "0.4.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "A mod to ntex-cors, not requiring an 'ORIGIN' header to produce CORS header."
readme = "README.md"
keywords = ["ntex", "web"]
homepage = "https://ntex.rs"
repository = "https://github.com/clia-mod/ntex-extras.git"
documentation = "https://docs.rs/clia-ntex-cors-mod/"
license = "MIT"
edition = "2018"

[lib]
name = "clia_ntex_cors_mod"
path = "src/lib.rs"

[dependencies]
ntex = "0.7.0"
derive_more = "0.99"
futures = "0.3"

[dev-dependencies]
ntex = { version = "0.7.0", features=["tokio"] }
