[package]
name = "clia-ntex-files-mod"
version = "0.3.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "A mod to ntex-files, supporting '.' leading."
readme = "README.md"
keywords = ["ntex", "http", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/clia-mod/ntex-extras.git"
documentation = "https://docs.rs/clia-ntex-files-mod/"
categories = ["asynchronous", "web-programming::http-server"]
license = "MIT"
edition = "2018"
workspace = ".."

[lib]
name = "clia_ntex_files_mod"
path = "src/lib.rs"

[dependencies]
ntex = "0.7.0"
ntex-http = "0.1.8"
bitflags = "2.1"
futures = "0.3"
derive_more = "0.99"
http = "0.2"
log = "0.4"
mime = "0.3"
mime_guess = "2.0.1"
percent-encoding = "2.1"
v_htmlescape = "0.15.8"
unicase = "2.6.0"
language-tags = "0.3.2"
httpdate = "1.0.2"

[dev-dependencies]
ntex = { version = "0.7.0", features = ["tokio", "openssl", "compress"] }
